--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "eaf94368-6ad1-4408-993f-7f9a225afda0"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
